minor fix: gap between home cards

--- a/static/css/style-inicio.css
+++ b/static/css/style-inicio.css
@@ -108,7 +108,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 140px;
+    gap: 45px;
     margin-top: 3rem;
     padding: 0 16px;
     width: 100%;
